finish flexboxes and fix layout bug for search field

--- a/source/stylesheets/refills/_flex-boxes.scss
+++ b/source/stylesheets/refills/_flex-boxes.scss
@@ -1,9 +1,22 @@
-$flex-box-border-color: $base-border-color;
+$flex-box-border-color: $medium-gray;
 $flex-box-border: 1px solid $flex-box-border-color;
 $flex-box-background: lighten($light-gray, 10);
-$flex-box-gutter: .3em;
+$flex-box-gutter: .4em;
 $flex-box-width: 18em;
-$flex-box-color: $base-font-color;
+$flex-box-color: transparentize($base-font-color, .3);
+$flex-box-top-colors: 
+  tomato, 
+  #72BFBF, 
+  #92B1E3, 
+  #E3D743,
+  #CCC,
+  #F6C05C;
+  // red
+  // teal 
+  // blue
+  // yellow
+  // gray
+  // orange
 
 .flex-boxes {
   @include clearfix;
@@ -12,54 +25,51 @@ $flex-box-color: $base-font-color;
   @include align-items(stretch);
   @include flex-wrap(wrap);
   text-align: center;
+}
 
-  a.flex-box {
-    @include transition (all 0.2s ease-in-out);
-    @include flex(1);
-    @include flex-grow(1);
-    @include align-self(stretch);
-    box-shadow: 0 2px 4px darken($base-background-color, 10);
-    border: $flex-box-border;
-    border-radius: $base-border-radius;
-    min-width: $flex-box-width;
-    margin: $flex-box-gutter;
-    padding: 2em 2em 3em 2em;
-    background: $flex-box-background;
-    border-top: 7px solid tomato;
+a.flex-box {
+  @include transition (all 0.2s ease-in-out);
+  @include flex(2 2 15em);
+  @include align-self(stretch);
+  box-shadow: inset 0 0 1px $flex-box-border-color, 0 2px 4px darken($base-background-color, 10);
+  border-radius: $base-border-radius;
+  margin: $flex-box-gutter;
+  padding: 2em 2em 3em 2em;
+  background: $flex-box-background;
 
-    &:hover, &:active {
-      // background-color: transparentize($base-accent-color, .1);
+  @for $i from 1 to 7 { // assign colors from $flex-box-top-colors list
+    &:nth-child(#{$i}) {
+      $color-from-list: nth($flex-box-top-colors, $i);
+      border-top: 6px solid $color-from-list;
+      
+      &:hover {
+        background-color: transparentize($color-from-list, .9);
+      }
     }
   }
+}
 
-  .flex-box img {
-    display: block;
-    opacity: .7;
-    height: 3em;
-    margin: auto;
-    margin-bottom: 2em;
-  }
+.flex-box img {
+  display: block;
+  opacity: .4;
+  height: 3em;
+  margin: auto;
+  margin-bottom: 2em;
+}
 
-  .flex-box h1 {
-    color: $flex-box-color;
-    font-size: 1.3em;
-    margin-bottom: .4em;
-  }
+.flex-box h1 {
+  color: $flex-box-color;
+  font-family: $serif;
+  font-size: 1.3em;
+  margin-bottom: .4em;
+}
 
-  .flex-box p {
-    margin: auto;
-    color: transparentize($flex-box-color, .3);
-  }
+.flex-box p {
+  margin: auto;
+  line-height: 1.5em;
+  color: transparentize($flex-box-color, .1);
+}
 
-  a.flex-box-big {
-    min-width: $flex-box-width * 2;
-  }
-
-  a.flex-box-image {
-    background: url(/images/lake-transparent.png);
-    background-color: $flex-box-background;
-    background-repeat: no-repeat;
-    background-position: top;
-    background-size: cover;
-  }
+a.flex-box-big {
+  @include flex(1 1 40em);
 }
