--- a/source/stylesheets/refills/_modal.scss
+++ b/source/stylesheets/refills/_modal.scss
@@ -47,7 +47,7 @@
   }
 
   .modal-close {
-    @include position(absolute, ($modal-padding /2) ($modal-padding /2) 0 0);
+    @include position(absolute, ($modal-padding /2) ($modal-padding /2) null null);
     @include size(1.5em);
     cursor: pointer;
     background: $modal-background;
