--- a/source/stylesheets/refills/_search-bar.scss
+++ b/source/stylesheets/refills/_search-bar.scss
@@ -25,7 +25,7 @@
     }
 
     button[type=submit] {
-      @include position(absolute, 0em 0em 0em 0);
+      @include position(absolute, 0em 0em 0em null);
       outline: none;
       border-top-left-radius: 0;
       border-bottom-left-radius: 0;
